# vizier-rule-ai-system

./: .gitignore  Dockerfile  Makefile  README.md  aws-setup-guide.md  debug_analysis.py  debug_missing_issues.py  debug_test.py  debug_tree_structure.py  demo_report.html  deploy-multi-env.sh  deploy-production.sh  design_test.html  docker-compose.yml  ec2-auto-scheduler-guide.md  env.template  increase-disk-size-guide.md  lambda-ec2-scheduler.md  network-troubleshooting.md  nginx-ssl-setup.sh  one-liner-deploy.txt  premium_report.html  production-check.sh  pyproject.toml  pyrightconfig.json  quick-deploy.sh  requirements.txt  run_all_tests.py  set_api_keys.sh  setup-instance-scheduler.sh  setup_env.sh  simple_test.py  styled_report.html  test_all_errors_combined.json  test_all_json_files.py  test_ambiguous_branch.json  test_analyzer.py  test_api_call.py  test_api_request.py  test_attached_json.py  (+12 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  dependency-update.yml  ec2-scheduler.yml  get-instance-id.yml  pypi-deploy.yml
app/: __init__.py
backend/: Dockerfile  api_response.json  env.example  requirements.txt  test_api.py  test_modular_architecture.py  test_new_parser.py  test_rule_analyzer.py  test_simple.py
backend/app/: config.py  constants.py  main.py
backend/app/api/: __init__.py  llm_endpoints.py  prompt_endpoints.py  rule_validator.py  streaming_dashboard.py
backend/app/database/: connection.py  schemas.py
backend/app/middleware/: rate_limiter.py
backend/app/models/: prompt.py  rule.py  validation_result.py
backend/app/services/: llm_service.py  prompt_service.py  rule_analyzer.py  rule_analyzer_v2.py  rule_parser.py
backend/app/services/analyzers/: __init__.py  ai_enhancer.py  condition_analyzer.py  issue_detector.py  metrics_generator.py  report_generator.py
backend/app/services/analyzers_backup/: ai_enhancer.py  condition_analyzer.py  issue_detector.py  report_generator.py
backend/app/services/tests/: test_rule_analysis_consistency.py
backend/app/templates/: report_template.html
backend/app/utils/: api_validator.py  logger.py  logical_validator.py  rule_parser.py
backend/src/: main.py
backend/src/api_gateway/: __init__.py  llm_endpoints.py  prompt_endpoints.py  rule_validator.py  streaming_dashboard.py
backend/src/llm_service/: __init__.py  service.py
backend/src/prompt_management/: __init__.py  service.py
backend/src/report_generation/: __init__.py
backend/src/report_generation/templates/: report_template.html
backend/src/rule_analysis/: __init__.py  analyzer.py  parser.py
backend/src/rule_analysis/analyzers/: __init__.py
backend/src/rule_analysis/models/: prompt.py  rule_json_validation_request.py  validation_result.py
backend/src/shared/: __init__.py  api_validator.py  config.py  logger.py  rule_parser.py
backend/src/shared/database/: connection.py
backend/tests/: test_main.py
deployment/: github-secrets-setup.md  quick-deployment-guide.md
deployment/pypi-server/: duckdns-updater.service  duckdns-updater.timer  install-duckdns-updater.sh  update-duckdns.sh
docs/: README.md  validation_response_schema.md
docs/api/: validation-response-schema.md
docs/architecture/: cicd-pipeline.md  project-overview-kr.md  pypi-module-refactoring.md
docs/how-to/: ai-secrets-setup.md  aws-server-check.md  deployment-readme.md  disk-cleanup-commands.md  ec2-scheduler-setup.md  emergency-server-check.md  lambda-scheduler-setup-complete.md  network-troubleshooting.md
docs/reports/: rule-validation-flow.md
frontend/streaming-dashboard/: index.html
nginx/: nginx.conf
src/raas_prompt_builder/: models.py
